LOGS/KB/sqkb100/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: logs-srv
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:8.7.1
          command: ["/bin/sh"]
          args: ["-c", "/usr/share/kibana/bin/kibana --config /usr/share/kibana/config/custom/kibana.yml"]
          ports:
            - containerPort: 5601
          volumeMounts:
            - name: kibana-data
              mountPath: /usr/share/kibana/data
            - name: kibana-config
              mountPath: /usr/share/kibana/config/custom/kibana.yml
              subPath: kibana.yml
          livenessProbe:
            httpGet:
              path: /api/status
              port: 5601
            initialDelaySeconds: 60      # Incrementamos el tiempo de espera inicial
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /api/status
              port: 5601
            initialDelaySeconds: 60      # Incrementamos el tiempo de espera inicial
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: kibana-data
          persistentVolumeClaim:
            claimName: kibana-pvc
        - name: kibana-config
          configMap:
            name: kibana-config
