LOGS/KB/sqkb100/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: logs-srv  # Cambiado a 'monitoring'
spec:
  ports:
    - port: 5601
      targetPort: 5601
  selector:
    app: kibana
